# logchange

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: on_pr_open.yml  on_push_changelog.yml  on_release.yml
docs/logchange/: changelog.md  cli_parser.md  record.md  record_body.md
examples/workflows/: on_pull_request_created.yml
logchange/: changelog.py  cli_parser.py  constants.py  eol_fixer.py  executor.py  main.py  record.py  record_body.py  record_section.py  utils.py
scripts/: before_commit.sh
tests/: test_record_body.py  test_record_section.py
